syntax = "proto3";

package com.wabenet.dodo.configuration.v1alpha2;

option go_package = "github.com/wabenet/dodo-core/api/configuration/v1alpha2;configuration";

import "google/protobuf/empty.proto";
import "plugin/v1alpha1/plugin.proto";
import "build/v1alpha2/build.proto";
import "runtime/v1alpha2/runtime.proto";

service Plugin {
  rpc GetPluginInfo(google.protobuf.Empty) returns (com.wabenet.dodo.plugin.v1alpha1.PluginInfo);
  rpc InitPlugin(google.protobuf.Empty) returns (com.wabenet.dodo.plugin.v1alpha1.InitPluginResponse);
  rpc ResetPlugin(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc ListBackdrops(google.protobuf.Empty) returns (ListBackdropsResponse);
  rpc GetBackdrop(GetBackdropRequest) returns (GetBackdropResponse);
}

message ListBackdropsResponse {
  repeated Backdrop backdrops = 1;
}

message GetBackdropRequest {
  string alias = 1;
}

message GetBackdropResponse {
  Backdrop backdrop = 1;
}

message Backdrop {
  string name = 1;
  repeated string aliases = 2;
  string runtime = 3;
  string builder = 4;

  com.wabenet.dodo.runtime.v1alpha2.ContainerConfig container_config = 5;
  com.wabenet.dodo.build.v1alpha2.BuildConfig build_config = 6;

  repeated File requiredFiles = 7;
}

message File {
  string file_path = 1;
  string contents = 2;
}

